--- a/Proyecto1/nbproject/private/private.properties
+++ b/Proyecto1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Marcel\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\MARCEL VALLEJO\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
