--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -33,9 +33,15 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto1
 excludes=
+file.reference.org-netbeans-api-visual.jar=C:\\APPS\\Apache NetBeans\\NetBeans-12.0\\netbeans\\platform\\modules\\org-netbeans-api-visual.jar
+file.reference.org-openide-util-lookup.jar=C:\\APPS\\Apache NetBeans\\NetBeans-12.0\\netbeans\\platform\\lib\\org-openide-util-lookup.jar
+file.reference.org-openide-util.jar=C:\\APPS\\Apache NetBeans\\NetBeans-12.0\\netbeans\\platform\\lib\\org-openide-util.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.org-openide-util-lookup.jar}:\
+    ${file.reference.org-openide-util.jar}:\
+    ${file.reference.org-netbeans-api-visual.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
