--- a/Proyecto1/nbproject/project.properties
+++ b/Proyecto1/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto1
+application.vendor=Marcel
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,16 +33,17 @@ dist.jar=${dist.dir}/Proyecto1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto1
+endorsed.classpath=
 excludes=
-file.reference.org-netbeans-api-visual.jar=C:\\APPS\\Apache NetBeans\\NetBeans-12.0\\netbeans\\platform\\modules\\org-netbeans-api-visual.jar
-file.reference.org-openide-util-lookup.jar=C:\\APPS\\Apache NetBeans\\NetBeans-12.0\\netbeans\\platform\\lib\\org-openide-util-lookup.jar
-file.reference.org-openide-util.jar=C:\\APPS\\Apache NetBeans\\NetBeans-12.0\\netbeans\\platform\\lib\\org-openide-util.jar
+file.reference.gs-algo-2.0.jar=D:\\6to Trimestre\\Estructura de datos\\GraphStreamLibrary\\gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=D:\\6to Trimestre\\Estructura de datos\\GraphStreamLibrary\\gs-core-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=D:\\6to Trimestre\\Estructura de datos\\GraphStreamLibrary\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.org-openide-util-lookup.jar}:\
-    ${file.reference.org-openide-util.jar}:\
-    ${file.reference.org-netbeans-api-visual.jar}
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-algo-2.0.jar}:\
+    ${file.reference.gs-ui-swing-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
